feat(messaging-api): single import file endpoint
